--- a/POS.Web/Views/Shared/_Layout.cshtml
+++ b/POS.Web/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                                     <a class="nav-link" asp-area="" asp-controller="ReprintReciept" asp-action="Index">Returns</a>
                                 </li>
                                 <li>
-                                    <a class="nav-link" asp-area="" asp-controller="ReprintReciept" asp-action="Index">Reprint Receipt</a>
+                                    <a class="nav-link" asp-area="" asp-controller="ReprintReciept" asp-action="IndexReceipt">Reprint Receipt</a>
                                 </li>
 
                             </ul>
